<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_add_day_title">Add day</string>
    <string name="action_add_week_title">Add week</string>
    <string name="action_confirm_creation_title">Confirm</string>
    <string name="action_delete_all_title">Delete all</string>
    <string name="action_delete_item_title">Delete</string>
    <string name="action_delete_this_week_title">Delete this week</string>
    <string name="action_edit_title">Edit</string>
    <string name="action_rename_week_title">Rename week</string>
    <string name="action_search_title">Search</string>
    <string name="action_select_all_title">All</string>

    <string name="add_class">Add class</string>
    <string name="add_course">Add course</string>
    <string name="add_instructor">Add instructor</string>

    <string name="app_name">Schedule manager</string>
    <string name="app_version">App version:</string>

    <string name="audience_distant">Distant</string>
    <string name="audience_info">Room %1$s</string>

    <string name="category_formatting_title">Formatting</string>
    <string name="category_title_appearance">Appearance</string>

    <string-array name="course_types">
        <item>Lecture</item>
        <item>Practice</item>
        <item>Laboratory</item>
    </string-array>

    <string-array name="days_of_week_full">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="days_of_week_short">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>

    <string name="dialog_message_delete_all">All items will be permanently deleted.</string>
    <string name="dialog_message_delete_day">Day \"%1$s\" and all its classes will be permanently deleted.</string>
    <string name="dialog_message_delete_one">This action cannot be undone.</string>
    <string name="dialog_message_delete_selected">Selected items (%1$d) will be permanently deleted.</string>
    <string name="dialog_message_delete_week">Week \"%1$s\" and all its content will be permanently deleted.</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_title_delete_multiple_items">Delete items?</string>
    <string name="dialog_title_delete_one">Delete this item?</string>
    <string name="dialog_title_placeholder">Are you sure?</string>
    <string name="dialog_title_select_day">Add new day</string>

    <string name="fragment_label_class_creation">New class</string>
    <string name="fragment_label_class_edition">Edit class</string>
    <string name="fragment_label_course_creation">New course</string>
    <string name="fragment_label_course_edition">Edit course</string>
    <string name="fragment_label_instructor_creation">New instructor</string>
    <string name="fragment_label_instructor_edition">Edit instructor</string>
    <string name="fragment_label_settings">Settings</string>

    <string name="hint_audience_building">Building №</string>
    <string name="hint_audience_cabinet">Cabinet №</string>
    <string name="hint_course_name">Course name</string>
    <string name="hint_end_time">End time</string>
    <string name="hint_instructor_first_name">First name</string>
    <string name="hint_instructor_last_name">Last name</string>
    <string name="hint_instructor_middle_name">Middle name</string>
    <string name="hint_instructor_name">Instructor name</string>
    <string name="hint_instructor_phone">Phone number</string>
    <string name="hint_new_week_title">Week title</string>
    <string name="hint_set_instructors">Instructors</string>
    <string name="hint_start_time">Start time</string>

    <string name="instructor_avatar_hint">Instructor\'s avatar</string>

    <string name="menu_about">About</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_instructors">Instructors</string>
    <string name="menu_schedule">Schedule</string>

    <string name="placeholder_classes">There are no classes this day.</string>
    <string name="placeholder_courses">There are no courses yet.</string>
    <string name="placeholder_instructors">There are no instructors yet.</string>
    <string name="placeholder_schedule">There are no study weeks yet.</string>
    <string name="placeholder_search">Nothing found.</string>
    <string name="placeholder_week">There are no study days this week yet.</string>

    <string name="selection_count">Selected: %1$d</string>

    <string name="snackbar_action_undone">Undo</string>
    <string name="snackbar_message_all_deleted">All items has been deleted.</string>
    <string name="snackbar_message_creation_success">New items has been added: %1$s.</string>
    <string name="snackbar_message_delete_failure">Failed to delete the \"%1$s\" item.</string>
    <string name="snackbar_message_delete_success">Item \"%1$s\" has been deleted.</string>
    <string name="snackbar_message_selected_deleted">Items deleted: %1$d</string>
    <string name="snackbar_message_update_failure">Failed to update \"%1$s\" item.</string>
    <string name="snackbar_message_update_success">Item \"%1$s\" has been successfully updated.</string>

    <string-array name="theme_entries">
        <item>Crimson</item>
        <item>Cyan</item>
        <item>Deep cyan</item>
        <item>Deep purple</item>
        <item>Green</item>
        <item>Light blue</item>
        <item>Purple</item>
        <item>Teal</item>
        <item>Pumpkin</item>
    </string-array>
    <string name="theme_preference_title">Theme</string>

    <string name="time_am">AM</string>
    <string-array name="time_format_entries">
        <item>Default (system-like)</item>
        <item>12-hour</item>
        <item>24-hour</item>
    </string-array>
    <string name="time_format_preference_title">Time format</string>
    <string name="time_pm">PM</string>

    <string name="title_contact_info_block">Contact info</string>
    <string name="title_course_setting_block">Course</string>
    <string name="title_instructor_setting_block">Instructor</string>
    <string name="title_main_info_block">Info</string>
    <string name="title_room_setting_block">Room</string>
    <string name="title_time_setting_block">Time</string>
    <string name="title_type_setting_block">Type</string>
    <string name="title_types_choosing_block">Types</string>

    <string name="developer_name" translatable="false">by vo1d</string>

    <string name="theme_preference_key" translatable="false">theme</string>

    <string name="time_format_preference_key" translatable="false">time format</string>
</resources>
