<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_outline_edit"
        android:title="@string/action_edit_title"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_day"
        android:icon="@drawable/ic_add"
        android:title="@string/action_add_day_title"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_week"
        android:icon="@drawable/ic_outline_post_add"
        android:title="@string/action_add_week_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rename_week"
        android:title="@string/action_rename_week_title"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_week"
        android:title="@string/action_delete_this_week_title"
        android:visible="false"
        app:showAsAction="never" />
</menu>