<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="?attr/colorPrimary" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/app_version_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:clickable="true"
                android:focusable="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="?attr/colorSecondary" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dev_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:drawablePadding="4dp"
        android:drawableTint="?attr/colorPrimary"
        android:gravity="center"
        android:text="@string/developer_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>